# Feather

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
feather/: Cargo.toml  build.rs  heaptrack.cargo.20476.zst
feather/src/: config.rs  database.rs  lib.rs  player.rs  update.rs  yt.rs
feather_frontend/: .gitignore  Cargo.toml  heaptrack.cargo.20503.zst
feather_frontend/rustypipe_reports/: 2025-03-03_07-58-59_WRN.json
feather_frontend/src/: backend.rs  config.rs  delete_userplaylist.rs  error.rs  help.rs  history.rs  home.rs  lib.rs  main.rs  player.rs  playlist_search.rs  popup_playlist.rs  search.rs  search_main.rs  statusbar.rs  userplaylist.rs
