[workspace]
members = ["feather", "feather_frontend"]

[workspace.dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
tokio = "1.43.0"
tui-scrollview = "0.3"
thiserror = "1.0"
serde_json = "1.0.140"
log = "0.4"
env_logger = "0.11"
simplelog = "0.11"
rascii_art = "0.4.5"
rustypipe = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sled = { version = "0.34.7", features = ["compression"] }
tempfile = "3.16.0"
libmpv2 = "4.1.0"
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
