[package]
name = "feather"
version = "0.1.0"
edition = "2024"

[dependencies]
rustypipe = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
bincode = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
libmpv2 = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
sys-info = "0.9.1"
toml = "0.8.20"

[lib]
name = "feather"
path = "src/lib.rs"
