[package]
name = "feather_frontend"
version = "0.1.0"
edition = "2024"
authors = ["13unk0wn 13unk0wn@proton.me"]
description = "A lightweight YouTube Music TUI in Rust."
license = "MIT"
categories = ["command-line-utilities", "multimedia"]
keywords = ["music", "youtube", "tui", "rust"]

[dependencies]
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tui-textarea = { workspace = true }
serde = { version = "1", features = ["derive"] }
dirs = {workspace = true}
feather = { path = "../feather" }
tokio = { workspace = true }
tui-scrollview = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
simplelog = { workspace = true }
rascii_art = { workspace = true }
toml = "0.8.20"

[[bin]]
name = "feather_frontend"
path = "src/main.rs"

